<resources>
    <string name="app_name">Machines</string>
    <string name="go_back_content_desc">Go back</string>
    <string name="clay_crusher">Clay Crusher</string>
    <string name="limestone_crusher">Limestone Crusher</string>
    <string name="raw_mill">Raw Mill</string>
    <string name="cement_mill_1">Cement Mill 1</string>
    <string name="cement_mill_2">Cement Mill 2</string>
    <string name="cement_mill_3">Cement Mill 3</string>
    <string name="kiln">Kiln</string>
    <string name="all">Machines</string>
    <string name="add_time_cd">Add time</string>
    <string name="add_time_manual">add time</string>
    <string name="add_new_item_cd">Add new item</string>
    <string name="end">End</string>
    <string name="r_h">R.H</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="no_reason">No reason</string>
    <string name="reason">Reason</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="enter_your_reason">Enter your reason</string>
    <string name="start_time">Start Time</string>
    <string name="stop_time">Stop Time</string>
    <string name="set">Set</string>
    <string name="_24_hour_time_format">24-hour time</string>
    <string name="running_status">Running status</string>
    <string name="last_running_status_from_yesterday">Last running status from yesterday</string>
    <string name="Update">Update</string>
    <string name="undo">Undo</string>
    <string name="one_field_is_required">One field is required</string>
    <string name="no_data">No data has been found yet.</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="full_report">Machines</string>
    <string name="no_stop">No Stop</string>
    <string name="home">Home</string>
    <string name="invalid_hour_format">Invalid hour format</string>
    <string name="invalid_minute_format">Invalid minutes format</string>

</resources>