<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    android:paddingBottom="16dp"
    android:layout_height="match_parent"
    tools:context=".ui.cement_mill_one.CementMillOneFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/blue"
            android:contentDescription="@string/add_new_item_cd"
            android:src="@drawable/baseline_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <include
            android:id="@+id/header"
            layout="@layout/header" />


        <TextView
            android:id="@+id/tv_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/offWhite_light_alpha"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.20" />


        <TextView
            android:id="@+id/tv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/start"
            android:textAlignment="center"
            android:textColor="@color/offWhite_light_alpha"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/tv_add"
            app:layout_constraintTop_toTopOf="@+id/tv_add" />


        <TextView
            android:id="@+id/tv_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/end"
            android:textColor="@color/offWhite_light_alpha"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/tv_start"
            app:layout_constraintTop_toTopOf="@+id/tv_start" />


        <TextView
            android:id="@+id/tv_rh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_h"
            android:textColor="@color/offWhite_light_alpha"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_end"
            app:layout_constraintTop_toTopOf="@+id/tv_end" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cement_mill_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_start"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="3"
            tools:listitem="@layout/details" />

        <ImageView
            android:id="@+id/iv_no_data"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:alpha="0.7"
            android:src="@drawable/baseline_add_to_queue"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.7"
            android:text="@string/no_data"
            android:textColor="@color/offWhite"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_no_data" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>